@@ -4,6 +4,8 @@ Cacti CHANGELOG
 -bug#0001166: Installer does not properly handle disabled guest_user conversion
 -bug: initialization of snmp_auth when using SNMP=NONE
 -bug: speed up add_graphs.php in most cases (still slow only if --input-fields is used)
+-feature: add graph title to graphs page
+
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
